src = [
  'worksheet/sheet_protection.cpp',
  'worksheet/range.cpp',
  'worksheet/page_margins.cpp',
  'worksheet/cell_iterator.cpp',
  'worksheet/worksheet.cpp',
  'worksheet/cell_vector.cpp',
  'worksheet/header_footer.cpp',
  'worksheet/range_reference.cpp',
  'worksheet/page_setup.cpp',
  'worksheet/range_iterator.cpp',
  'packaging/relationship.cpp',
  'packaging/uri.cpp',
  'packaging/manifest.cpp',
  'cell/rich_text_run.cpp',
  'cell/rich_text.cpp',
  'cell/cell_reference.cpp',
  'cell/index_types.cpp',
  'cell/cell.cpp',
  'cell/comment.cpp',
  'styles/style.cpp',
  'styles/conditional_format.cpp',
  'styles/font.cpp',
  'styles/alignment.cpp',
  'styles/fill.cpp',
  'styles/number_format.cpp',
  'styles/color.cpp',
  'styles/border.cpp',
  'styles/format.cpp',
  'styles/protection.cpp',
  'utils/variant.cpp',
  'utils/timedelta.cpp',
  'utils/exceptions.cpp',
  'utils/time.cpp',
  'utils/date.cpp',
  'utils/path.cpp',
  'utils/datetime.cpp',
  'workbook/streaming_workbook_reader.cpp',
  'workbook/workbook.cpp',
  'workbook/streaming_workbook_writer.cpp',
  'workbook/named_range.cpp',
  'workbook/worksheet_iterator.cpp',
  'detail/cryptography/xlsx_crypto_producer.cpp',
  'detail/cryptography/sha.cpp',
  'detail/cryptography/xlsx_crypto_consumer.cpp',
  'detail/cryptography/encryption_info.cpp',
  'detail/cryptography/hash.cpp',
  'detail/cryptography/base64.cpp',
  'detail/cryptography/compound_document.cpp',
  'detail/cryptography/aes.cpp',
  'detail/number_format/number_formatter.cpp',
  'detail/serialization/vector_streambuf.cpp',
  'detail/serialization/xlsx_producer.cpp',
  'detail/serialization/custom_value_traits.cpp',
  'detail/serialization/miniz.cpp',
  'detail/serialization/open_stream.cpp',
  'detail/serialization/xlsx_consumer.cpp',
  'detail/serialization/zstream.cpp',
  'detail/implementations/cell_impl.cpp',
  'detail/unicode.cpp',
  'detail/constants.cpp',
  'detail/header_footer/header_footer_code.cpp',
  'detail/cryptography/sha1.c',
  'detail/cryptography/sha512.c',
  '../third-party/libstudxml/xml/parser.cxx',
  '../third-party/libstudxml/xml/serializer.cxx',
  '../third-party/libstudxml/xml/qname.cxx',
  '../third-party/libstudxml/xml/value-traits.cxx',
  '../third-party/libstudxml/xml/details/genx/genx.c',
  '../third-party/libstudxml/xml/details/genx/char-props.c',
  '../third-party/libstudxml/xml/details/expat/xmlparse.c',
  '../third-party/libstudxml/xml/details/expat/xmlrole.c',
  '../third-party/libstudxml/xml/details/expat/xmltok.c',
]

incs = include_directories(
  '../include',
  '../third-party/libstudxml',
  '../third-party/utfcpp',
)

args = ['-DLIBSTUDXML_STATIC_LIB=1', '-DXLNT_SHARED=1']

if target_machine.system() == 'windows'
  args += '-DXLNT_EXPORT=1'
endif

xlnt_lib = shared_library('xlnt',
  name_prefix : 'lib',
  sources : src,
  include_directories : incs,
  cpp_args : args,
)

xlnt_dep = declare_dependency(
  link_with : xlnt_lib,
  include_directories : include_directories('../include', is_system : true),
)
